gcc/testsuite/gcc.target/aarch64/arch-diagnostics-1.c
/* { dg-error "unknown" "" {target "aarch64*-*-*" } } */
/* { dg-options "-O2 -march=dummy" } */

void f ()
{
  return;
}
